content/kapacitor/v0.11/nodes/influx_d_b_out_node.md
---
title: InfluxDBOutNode
note: Auto generated by tickdoc

menu:
  kapacitor_011:
    name: InfluxDBOut
    identifier: influx_d_b_out_node
    weight: 70
    parent: nodes
---

Writes the data to InfluxDB as it is received. 

Example: 


```javascript
    stream
        .eval(lambda: "errors" / "total")
            .as('error_percent')
        // Write the transformed data to InfluxDB
        .influxDBOut()
            .database('mydb')
            .retentionPolicy('myrp')
            .measurement('errors')
            .tag('kapacitor', 'true')
            .tag('version', '0.2')
```



Index
-----

### Properties

-	[Buffer](/kapacitor/v0.11/nodes/influx_d_b_out_node/#buffer)
-	[Cluster](/kapacitor/v0.11/nodes/influx_d_b_out_node/#cluster)
-	[Database](/kapacitor/v0.11/nodes/influx_d_b_out_node/#database)
-	[FlushInterval](/kapacitor/v0.11/nodes/influx_d_b_out_node/#flushinterval)
-	[Measurement](/kapacitor/v0.11/nodes/influx_d_b_out_node/#measurement)
-	[Precision](/kapacitor/v0.11/nodes/influx_d_b_out_node/#precision)
-	[RetentionPolicy](/kapacitor/v0.11/nodes/influx_d_b_out_node/#retentionpolicy)
-	[Tag](/kapacitor/v0.11/nodes/influx_d_b_out_node/#tag)
-	[WriteConsistency](/kapacitor/v0.11/nodes/influx_d_b_out_node/#writeconsistency)

### Chaining Methods

-	[Deadman](/kapacitor/v0.11/nodes/influx_d_b_out_node/#deadman)
-	[Stats](/kapacitor/v0.11/nodes/influx_d_b_out_node/#stats)

Properties
----------

Property methods modify state on the calling node. They do not add another node to the pipeline, and always return a reference to the calling node.

### Buffer

Number of points to buffer when writing to InfluxDB. 
Default: 1000 


```javascript
node.buffer(value int64)
```


### Cluster

The name of the InfluxDB instance to connect to. 
If empty the configured default will be used. 


```javascript
node.cluster(value string)
```


### Database

The name of the database. 


```javascript
node.database(value string)
```


### FlushInterval

Write points to InfluxDB after interval even if buffer is not full. 
Default: 10s 


```javascript
node.flushInterval(value time.Duration)
```


### Measurement

The name of the measurement. 


```javascript
node.measurement(value string)
```


### Precision

The precision to use when writing the data. 


```javascript
node.precision(value string)
```


### RetentionPolicy

The name of the retention policy. 


```javascript
node.retentionPolicy(value string)
```


### Tag

Add a static tag to all data points. 
Tag can be called more than once. 



```javascript
node.tag(key string, value string)
```


### WriteConsistency

The write consistency to use when writing the data. 


```javascript
node.writeConsistency(value string)
```


Chaining Methods
----------------

Chaining methods create a new node in the pipeline as a child of the calling node. They do not modify the calling node.

### Deadman

Helper function for creating an alert on low throughput, aka deadman&#39;s switch. 

- Threshold -- trigger alert if throughput drops below threshold in points/interval. 
- Interval -- how often to check the throughput. 
- Expressions -- optional list of expressions to also evaluate. Useful for time of day alerting. 

Example: 


```javascript
    var data = stream.from()...
    // Trigger critical alert if the throughput drops below 100 points per 10s and checked every 10s.
    data.deadman(100.0, 10s)
    //Do normal processing of data
    data....
```

The above is equivalent to this 
Example: 


```javascript
    var data = stream.from()...
    // Trigger critical alert if the throughput drops below 100 points per 10s and checked every 10s.
    data.stats(10s)
          .derivative('collected')
              .unit(10s)
              .nonNegative()
          .alert()
              .id('node \'stream0\' in task \'{{ .TaskName }}\'')
              .message('{{ .ID }} is {{ if eq .Level "OK" }}alive{{ else }}dead{{ end }}: {{ index .Fields "collected" | printf "%0.3f" }} points/10s.')
              .crit(lamdba: "collected" <= 100.0)
    //Do normal processing of data
    data....
```

The `id` and `message` alert properties can be configured globally via the &#39;deadman&#39; configuration section. 

Since the [AlertNode](/kapacitor/v0.11/nodes/alert_node/) is the last piece it can be further modified as normal. 
Example: 


```javascript
    var data = stream.from()...
    // Trigger critical alert if the throughput drops below 100 points per 1s and checked every 10s.
    data.deadman(100.0, 10s).slack().channel('#dead_tasks')
    //Do normal processing of data
    data....
```

You can specify additional lambda expressions to further constrain when the deadman&#39;s switch is triggered. 
Example: 


```javascript
    var data = stream.from()...
    // Trigger critical alert if the throughput drops below 100 points per 10s and checked every 10s.
    // Only trigger the alert if the time of day is between 8am-5pm.
    data.deadman(100.0, 10s, lambda: hour("time") >= 8 AND hour("time") <= 17)
    //Do normal processing of data
    data....
```



```javascript
node.deadman(threshold float64, interval time.Duration, expr ...tick.Node)
```

Returns: [AlertNode](/kapacitor/v0.11/nodes/alert_node/)


### Stats

Create a new stream of data that contains the internal statistics of the node. 
The interval represents how often to emit the statistics based on real time. 
This means the interval time is independent of the times of the data points the source node is receiving. 


```javascript
node.stats(interval time.Duration)
```

Returns: [StatsNode](/kapacitor/v0.11/nodes/stats_node/)

